--- a/discovery-service/src/main/resources/application.yaml
+++ b/discovery-service/src/main/resources/application.yaml
@@ -1,11 +1,5 @@
 spring:
   application:
     name: discovery-service
-
-server:
-  port: 8761
-
-eureka:
-  client:
-    register-with-eureka: false
-    fetch-registry: false
+  config:
+    import: optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:${CONFIG_SERVER_PORT:8888}
