🌟 feat(server): medicine service [medicine/category]

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,20 @@
-#DISCOVERY SERVICE
+# DISCOVERY SERVICE
 DISCOVERY_SERVICE_PORT=
 DISCOVERY_SERVICE_HOST=
 
-#CONFIG SERVER
+# CONFIG SERVER
 CONFIG_SERVER_PORT=
 CONFIG_SERVER_HOST=
 
-#API GATEWAY
+# API GATEWAY
 API_GATEWAY=
+
+# MEDICINE SERVICE
+MEDICINE_SERVICE_PORT=
+MEDICINE_DB_HOST=
+MEDICINE_DB_PORT=
+MEDICINE_DB_NAME=
+MEDICINE_DB_USERNAME=
+MEDICINE_DB_PASSWORD=
+# docker compose file for medicine service, if not using: default ../../infrastructure/dev/medicine/compose.yml
+# DOCKER_COMPOSE_FILE_MEDICINE_SERVICE=
