--- a/config-server/src/main/resources/configuration/api-gateway.yml
+++ b/config-server/src/main/resources/configuration/api-gateway.yml
@@ -11,9 +11,10 @@ spring:
 
 server:
   port: ${API_GATEWAY_PORT:8080}
+
 eureka:
   instance:
     prefer-ip-address: true
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://${DISCOVERY_SERVICE_HOST:localhost}:${DISCOVERY_SERVICE_PORT:8761}/eureka/
