--- a/infrastructure/dev/medicine-service/compose.yaml
+++ b/infrastructure/dev/medicine-service/compose.yaml
@@ -1,10 +1,11 @@
 services:
   mysql:
     image: 'mysql:latest'
+    container_name: mysql-medicine-service-dev
     environment:
       - 'MYSQL_DATABASE=mydatabase'
       - 'MYSQL_PASSWORD=secret'
       - 'MYSQL_ROOT_PASSWORD=verysecret'
       - 'MYSQL_USER=myuser'
     ports:
-      - '3306'
+      - '3306:3306'
