--- a/medicine-service/src/main/resources/application.yaml
+++ b/medicine-service/src/main/resources/application.yaml
@@ -1,18 +1,5 @@
 spring:
   application:
     name: medicine-service
-  docker:
-    compose:
-      enabled: false
-
-server:
-  port: 8081
-  servlet:
-    context-path: /medicine-service
-
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+  config:
+    import: optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:${CONFIG_SERVER_PORT:8081}
