🌟 feat(server): auth-service & api-gate config

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,17 @@ MEDICINE_DB_USERNAME=
 MEDICINE_DB_PASSWORD=
 # docker compose file for medicine service, if not using: default ../../infrastructure/dev/medicine/compose.yml
 # DOCKER_COMPOSE_FILE_MEDICINE_SERVICE=
+
+# AUTH SERVICE
+AUTH_SERVICE_PORT=
+AUTH_DB_HOST=
+AUTH_DB_PORT=
+AUTH_DB_NAME=
+AUTH_DB_USERNAME=
+AUTH_DB_PASSWORD=
+JWT_PRIVATE_KEY=
+JWT_PUBLIC_KEY=
+JWT_ACCESS_TOKEN_EXPIRATION=
+JWT_REFRESH_TOKEN_EXPIRATION=
+# docker compose file for auth service, if not using: default ../../infrastructure/dev/auth-service/compose.yml
+# DOCKER_COMPOSE_FILE_AUTH_SERVICE=
