--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# GENERAL SETTINGS
+# Set to "true" to enable docker compose setup, default is "false"
+DOCKER_COMPOSE_ENABLED=
+
 # DISCOVERY SERVICE
 DISCOVERY_SERVICE_PORT=
 DISCOVERY_SERVICE_HOST=
@@ -16,7 +20,7 @@ MEDICINE_DB_PORT=
 MEDICINE_DB_NAME=
 MEDICINE_DB_USERNAME=
 MEDICINE_DB_PASSWORD=
-# docker compose file for medicine service, if not using: default ../../infrastructure/dev/medicine/compose.yml
+# docker compose file for medicine service, if not using: default ../../infrastructure/dev/medicine/compose.yml, only used if DOCKER_COMPOSE_ENABLED=true
 # DOCKER_COMPOSE_FILE_MEDICINE_SERVICE=
 
 # AUTH SERVICE
@@ -30,5 +34,5 @@ JWT_PRIVATE_KEY=
 JWT_PUBLIC_KEY=
 JWT_ACCESS_TOKEN_EXPIRATION=
 JWT_REFRESH_TOKEN_EXPIRATION=
-# docker compose file for auth service, if not using: default ../../infrastructure/dev/auth-service/compose.yml
+# docker compose file for auth service, if not using: default ../../infrastructure/dev/auth-service/compose.yml, only used if DOCKER_COMPOSE_ENABLED=true
 # DOCKER_COMPOSE_FILE_AUTH_SERVICE=
