--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,9 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@v2
+#      Optional: Validate Gradle wrapper to ensure security and integrity
+#      - name: Validate Gradle wrapper
+#        uses: gradle/wrapper-validation-action@v2
 
       - name: Build all modules
         run: ./gradlew clean build -x test
