Feat: patient api

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ MEDICINE_DB_PORT=
 MEDICINE_DB_NAME=
 MEDICINE_DB_USERNAME=
 MEDICINE_DB_PASSWORD=
-# docker compose file for medicine service, if not using: default ../../infrastructure/dev/medicine/compose.yml, only used if DOCKER_COMPOSE_ENABLED=true
+# docker compose file for medicine service, if not using: default ../../infrastructure/dev/medicine/compose.yaml, only used if DOCKER_COMPOSE_ENABLED=true
 # DOCKER_COMPOSE_FILE_MEDICINE_SERVICE=
 
 # AUTH SERVICE
@@ -34,5 +34,15 @@ JWT_PRIVATE_KEY=
 JWT_PUBLIC_KEY=
 JWT_ACCESS_TOKEN_EXPIRATION=
 JWT_REFRESH_TOKEN_EXPIRATION=
-# docker compose file for auth service, if not using: default ../../infrastructure/dev/auth-service/compose.yml, only used if DOCKER_COMPOSE_ENABLED=true
+# docker compose file for auth service, if not using: default ../../infrastructure/dev/auth-service/compose.yaml, only used if DOCKER_COMPOSE_ENABLED=true
 # DOCKER_COMPOSE_FILE_AUTH_SERVICE=
+
+
+#PATIENT
+DOCKER_COMPOSE_FILE_PATIENT_SERVICE=
+PATIENT_DB_HOST=
+PATIENT_DB_PORT=
+PATIENT_DB_NAME=
+PATIENT_DB_USERNAME=
+PATIENT_DB_PASSWORD=
+PATIENT_SERVICE_PORT=
