--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,46 +1,94 @@
-name: CI Build and Package
+# name: CI Build and Package
+#
+# on:
+#   push:
+#     branches: ["main", "develop"]
+#   pull_request:
+#     branches: ["main", "develop"]
+#
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#
+#     strategy:
+#       matrix:
+#         java-version: ["23"]
+#
+#     steps:
+#       - name: Checkout source code
+#         uses: actions/checkout@v4
+#
+#       - name: Set up JDK ${{ matrix.java-version }}
+#         uses: actions/setup-java@v4
+#         with:
+#           java-version: ${{ matrix.java-version }}
+#           distribution: "temurin"
+#           cache: gradle
+#
+#       #      Optional: Validate Gradle wrapper to ensure security and integrity
+#       #      - name: Validate Gradle wrapper
+#       #        uses: gradle/wrapper-validation-action@v2
+#
+#       - name: Build all modules
+#         run: ./gradlew clean build -x test
+#
+#       - name: Run tests
+#         run: ./gradlew test
+#
+#       - name: Package JARs (all services)
+#         run: ./gradlew :config-server:bootJar :discovery-service:bootJar :medicine-service:bootJar :auth-service:bootJar :api-gateway:bootJar
+
+name: CI Build and Push Docker Images
 
 on:
   push:
-    branches: [ "main", "develop" ]
+    branches: ["main", "develop"]
   pull_request:
-    branches: [ "main", "develop" ]
+    branches: ["main", "develop"]
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        java-version: [ '23' ]
+        service: [config-server, discovery-service, api-gateway, auth-service, medicine-service, patient-service]
+        java-version: ["23"]
 
     steps:
-      - name: Checkout source code
+      # 1️⃣ Checkout source
+      - name: Checkout code
         uses: actions/checkout@v4
 
+      # 2️⃣ Setup JDK
       - name: Set up JDK ${{ matrix.java-version }}
         uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java-version }}
-          distribution: 'temurin'
+          distribution: temurin
           cache: gradle
 
-#      Optional: Validate Gradle wrapper to ensure security and integrity
-#      - name: Validate Gradle wrapper
-#        uses: gradle/wrapper-validation-action@v2
-
+      # 3️⃣ Build all modules (chỉ cần build bootJar)
       - name: Build all modules
-        run: ./gradlew clean build -x test
+        run: ./gradlew clean bootJar -x test
 
-      - name: Run tests
-        run: ./gradlew test
+      # 4️⃣ Login Docker Hub
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Package JARs (all services)
-        run: ./gradlew :config-server:bootJar :discovery-service:bootJar :medicine-service:bootJar :auth-service:bootJar :api-gateway:bootJar
+      # 5️⃣ Setup Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-#      - name: Archive built JARs
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: microservice-packages
-#          path: |
-#            **/build/libs/*.jar
+      # 6️⃣ Build & Push Docker Image cho từng service
+      - name: Build & Push ${{ matrix.service }} Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: infrastructure/pro/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:latest
+          build-args: |
+            SERVICE=${{ matrix.service }}
