🚧 build(server): base department

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,12 @@ PATIENT_DB_NAME=
 PATIENT_DB_USERNAME=
 PATIENT_DB_PASSWORD=
 PATIENT_SERVICE_PORT=
+
+#HR
+DOCKER_COMPOSE_FILE_HR_SERVICE=
+HR_DB_HOST=
+HR_DB_PORT=
+HR_DB_NAME=
+HR_DB_USERNAME=
+HR_DB_PASSWORD=
+HR_SERVICE_PORT=
