--- a/discovery-service/src/main/resources/application.yaml
+++ b/discovery-service/src/main/resources/application.yaml
@@ -2,4 +2,4 @@ spring:
   application:
     name: discovery-service
   config:
-    import: optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:${CONFIG_SERVER_PORT:8081}
+    import: optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:${CONFIG_SERVER_PORT}
