--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,7 +93,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [ config-server, discovery-service, api-gateway, auth-service, medicine-service, patient-service ]
+        service: [ config-server, discovery-service, api-gateway, auth-service, medicine-service, patient-service, hr-service ]
         java-version: [ "23" ]
 
     steps:
