--- a/infrastructure/dev/docker-compose.yml
+++ b/infrastructure/dev/docker-compose.yml
@@ -2,3 +2,4 @@ include:
   - ./auth-service/compose.yaml
   - ./medicine-service/compose.yaml
   - ./patient-service/compose.yaml
+  - ./appointment-service/compose.yaml
