--- a/appointment-service/src/main/resources/application.yaml
+++ b/appointment-service/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 spring:
   application:
-    name: patient-service
+    name: appointment-service
   config:
     import: optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:${CONFIG_SERVER_PORT:8081}
