feat(medical-exam-service): implement medical exam and prescription management
- Add medical-exam-service with full CRUD for medical exams
- Add prescription management with saga pattern for stock management
- Implement business rules:
  - One exam per appointment
  - No exam deletion (audit requirement)
  - 24-hour modification window
  - One prescription per exam
  - Medicine validation and stock checking
  - Stock decrement with saga rollback on failure
  - Prescription cancellation with stock restoration
- Add proper error responses with GlobalExceptionHandler
- Update API paths to /api/* pattern for consistency
- Update medicine-service stock endpoint to use 'delta' field
- Add internal service-to-service auth header forwarding
- Add Docker Compose configuration for full stack deployment

--- a/config-server/src/main/resources/configuration/api-gateway.yml
+++ b/config-server/src/main/resources/configuration/api-gateway.yml
@@ -16,6 +16,12 @@ spring:
                 - Path=/auth-service/**
               filters:
                 - StripPrefix=1
+            - id: medical-exam-service
+              uri: lb://medical-exam-service
+              predicates:
+                - Path=/medical-exam-service/**
+              filters:
+                - StripPrefix=1
 
 jwt:
   public-key: ${JWT_PUBLIC_KEY}
