🚧 build(server): add hr-service to compose

--- a/infrastructure/pro/compose.pro.yaml
+++ b/infrastructure/pro/compose.pro.yaml
@@ -18,6 +18,24 @@ services:
     networks:
       - app-network
     restart: always
+  mysql-hr-service:
+    image: mysql:8.0
+    container_name: mysql-hr-service
+    env_file:
+      - .env
+    environment:
+      MYSQL_ROOT_PASSWORD: ${HR_DB_PASSWORD}
+      MYSQL_DATABASE: ${HR_DB_NAME}
+      MYSQL_USER: ${HR_DB_USERNAME}
+      MYSQL_PASSWORD: ${HR_DB_PASSWORD}
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - app-network
+    restart: always
   mysql-medicine-service:
     image: mysql:8.0
     container_name: mysql-medicine-service
@@ -146,6 +164,21 @@ services:
       config-server-pro:
         condition: service_healthy
       mysql-patient-service:
+        condition: service_healthy
+    env_file:
+      - .env
+    networks:
+      - app-network
+    restart: always
+  hr-service-pro:
+    image: dnhphong2005/hr-service:latest
+    container_name: hr-service-pro
+    environment:
+      - SERVICE=hr-service
+    depends_on:
+      config-server-pro:
+        condition: service_healthy
+      mysql-hr-service:
         condition: service_healthy
     env_file:
       - .env
