fix: Update gateway security config and build workflow
- Change SecurityConfig to use wildcard path matchers (/api/auth/**, /api/medicines/**)
- Remove OAuth2 Resource Server temporarily for testing path matching
- Disable httpBasic and formLogin to prevent unwanted authentication
- Add medical-exam-service to Dockerfile
- Switch to Dockerfile.fast for faster development builds
- Create rebuild-and-deploy.sh script to automate build workflow
- Update compose.yaml with EUREKA_CLIENT_SERVICEURL_DEFAULTZONE env vars

--- a/.env.example
+++ b/.env.example
@@ -55,3 +55,22 @@ HR_DB_NAME=
 HR_DB_USERNAME=
 HR_DB_PASSWORD=
 HR_SERVICE_PORT=
+
+#APPOINTMENT
+DOCKER_COMPOSE_FILE_APPOINTMENT_SERVICE=
+APPOINTMENT_DB_HOST=
+APPOINTMENT_DB_PORT=
+APPOINTMENT_DB_NAME=
+APPOINTMENT_DB_USERNAME=
+APPOINTMENT_DB_PASSWORD=
+APPOINTMENT_SERVICE_PORT=
+
+#MEDICAL_EXAM
+DOCKER_COMPOSE_FILE_MEDICAL_EXAM_SERVICE=
+MEDICAL_EXAM_DB_HOST=
+MEDICAL_EXAM_DB_PORT=
+MEDICAL_EXAM_DB_NAME=
+MEDICAL_EXAM_DB_USERNAME=
+MEDICAL_EXAM_DB_PASSWORD=
+MEDICAL_EXAM_SERVICE_PORT=
+MEDICINE_SERVICE_HOST=
