--- a/infrastructure/dev/hr-service/compose.yaml
+++ b/infrastructure/dev/hr-service/compose.yaml
@@ -3,7 +3,7 @@ services:
     image: 'mysql:latest'
     container_name: mysql-hr-service-dev
     environment:
-      - 'MYSQL_DATABASE=mydatabase'
+      - 'MYSQL_DATABASE=hr_db'
       - 'MYSQL_PASSWORD=secret'
       - 'MYSQL_ROOT_PASSWORD=verysecret'
       - 'MYSQL_USER=myuser'
