--- a/infrastructure/pro/compose.yaml
+++ b/infrastructure/pro/compose.yaml
@@ -14,7 +14,8 @@ services:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 10
+      start_period: 60s
     networks:
       - app-network
     restart: always
@@ -32,7 +33,8 @@ services:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 10
+      start_period: 60s
     networks:
       - app-network
     restart: always
@@ -50,7 +52,46 @@ services:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 10
+      start_period: 60s
+    networks:
+      - app-network
+    restart: always
+  mysql-hr-service:
+    image: mysql:8.0
+    container_name: mysql-hr-service
+    env_file:
+      - .env
+    environment:
+      MYSQL_ROOT_PASSWORD: ${HR_DB_PASSWORD}
+      MYSQL_DATABASE: ${HR_DB_NAME}
+      MYSQL_USER: ${HR_DB_USERNAME}
+      MYSQL_PASSWORD: ${HR_DB_PASSWORD}
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 60s
+    networks:
+      - app-network
+    restart: always
+  mysql-appointment-service:
+    image: mysql:8.0
+    container_name: mysql-appointment-service
+    env_file:
+      - .env
+    environment:
+      MYSQL_ROOT_PASSWORD: ${APPOINTMENT_DB_PASSWORD}
+      MYSQL_DATABASE: ${APPOINTMENT_DB_NAME}
+      MYSQL_USER: ${APPOINTMENT_DB_USERNAME}
+      MYSQL_PASSWORD: ${APPOINTMENT_DB_PASSWORD}
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 60s
     networks:
       - app-network
     restart: always
@@ -59,7 +100,9 @@ services:
   config-server-pro:
     build:
       context: ../../
-      dockerfile: infrastructure/pro/Dockerfile
+      dockerfile: infrastructure/pro/Dockerfile.fast
+      args:
+        SERVICE: config-server
     container_name: config-server-pro
     environment:
       - 'SERVICE=config-server'
@@ -72,13 +115,16 @@ services:
     restart: always
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:${CONFIG_SERVER_PORT}/actuator/health" ]
-      interval: 30s
+      interval: 15s
       timeout: 10s
-      retries: 5
+      retries: 10
+      start_period: 90s
   discovery-service-pro:
     build:
       context: ../../
-      dockerfile: infrastructure/pro/Dockerfile
+      dockerfile: infrastructure/pro/Dockerfile.fast
+      args:
+        SERVICE: discovery-service
     container_name: discovery-service-pro
     environment:
       - 'SERVICE=discovery-service'
@@ -95,10 +141,13 @@ services:
   api-gateway-pro:
     build:
       context: ../../
-      dockerfile: infrastructure/pro/Dockerfile
+      dockerfile: infrastructure/pro/Dockerfile.fast
+      args:
+        SERVICE: api-gateway
     container_name: api-gateway-pro
     environment:
       - 'SERVICE=api-gateway'
+      - 'EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service-pro:8763/eureka/'
     ports:
       - "${API_GATEWAY_PORT}:${API_GATEWAY_PORT}"
     depends_on:
@@ -112,10 +161,15 @@ services:
   auth-service-pro:
     build:
       context: ../../
-      dockerfile: infrastructure/pro/Dockerfile
+      dockerfile: infrastructure/pro/Dockerfile.fast
+      args:
+        SERVICE: auth-service
     container_name: auth-service-pro
     environment:
       - 'SERVICE=auth-service'
+      - 'EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service-pro:8763/eureka/'
+    ports:
+      - "${AUTH_SERVICE_PORT}:${AUTH_SERVICE_PORT}"
     depends_on:
       config-server-pro:
         condition: service_healthy
@@ -130,9 +184,14 @@ services:
     build:
       context: ../../
       dockerfile: infrastructure/pro/Dockerfile
+      args:
+        SERVICE: medicine-service
     container_name: medicine-service-pro
     environment:
       - 'SERVICE=medicine-service'
+      - 'EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service-pro:8763/eureka/'
+    ports:
+      - "${MEDICINE_SERVICE_PORT}:${MEDICINE_SERVICE_PORT}"
     depends_on:
       config-server-pro:
         condition: service_healthy
@@ -146,10 +205,15 @@ services:
   patient-service-pro:
     build:
       context: ../../
-      dockerfile: infrastructure/pro/Dockerfile
+      dockerfile: infrastructure/pro/Dockerfile.fast
+      args:
+        SERVICE: patient-service
     container_name: patient-service-pro
     environment:
       - 'SERVICE=patient-service'
+      - 'EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service-pro:8763/eureka/'
+    ports:
+      - "${PATIENT_SERVICE_PORT}:${PATIENT_SERVICE_PORT}"
     depends_on:
       config-server-pro:
         condition: service_healthy
@@ -160,23 +224,68 @@ services:
     networks:
       - app-network
     restart: always
+  hr-service-pro:
+    build:
+      context: ../../
+      dockerfile: infrastructure/pro/Dockerfile.fast
+      args:
+        SERVICE: hr-service
+    container_name: hr-service-pro
+    environment:
+      - 'SERVICE=hr-service'
+      - 'EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service-pro:8763/eureka/'
+    ports:
+      - "${HR_SERVICE_PORT}:${HR_SERVICE_PORT}"
+    depends_on:
+      config-server-pro:
+        condition: service_healthy
+      mysql-hr-service:
+        condition: service_healthy
+    env_file:
+      - .env
+    networks:
+      - app-network
+    restart: always
+  appointment-service-pro:
+    build:
+      context: ../../
+      dockerfile: infrastructure/pro/Dockerfile.fast
+      args:
+        SERVICE: appointment-service
+    container_name: appointment-service-pro
+    environment:
+      - 'SERVICE=appointment-service'
+      - 'EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service-pro:8763/eureka/'
+    ports:
+      - "${APPOINTMENT_SERVICE_PORT}:${APPOINTMENT_SERVICE_PORT}"
+    depends_on:
+      config-server-pro:
+        condition: service_healthy
+      mysql-appointment-service:
+        condition: service_healthy
+    env_file:
+      - .env
+    networks:
+      - app-network
+    restart: always
   
-  # Added for Manual Testing
-  mysql-medical-exam-service-dev:
+  # Medical Exam Service (merged from feature/medical-exam-service)
+  mysql-medical-exam-service:
     image: mysql:8.0
-    container_name: mysql-medical-exam-service-dev
+    container_name: mysql-medical-exam-service
     env_file:
       - .env
     environment:
-      MYSQL_ROOT_PASSWORD: ${MEDICAL_EXAM_DB_PASSWORD:-secret}
-      MYSQL_DATABASE: ${MEDICAL_EXAM_DB_NAME:-medical_exam_db}
-      MYSQL_USER: ${MEDICAL_EXAM_DB_USERNAME:-myuser}
-      MYSQL_PASSWORD: ${MEDICAL_EXAM_DB_PASSWORD:-secret}
+      MYSQL_ROOT_PASSWORD: ${MEDICAL_EXAM_DB_PASSWORD}
+      MYSQL_DATABASE: ${MEDICAL_EXAM_DB_NAME}
+      MYSQL_USER: ${MEDICAL_EXAM_DB_USERNAME}
+      MYSQL_PASSWORD: ${MEDICAL_EXAM_DB_PASSWORD}
     healthcheck:
-      test: ["CMD", "true"]
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 10
+      start_period: 60s
     networks:
       - app-network
     restart: always
@@ -184,14 +293,19 @@ services:
   medical-exam-service-pro:
     build:
       context: ../../
-      dockerfile: infrastructure/pro/Dockerfile
+      dockerfile: infrastructure/pro/Dockerfile.fast
+      args:
+        SERVICE: medical-exam-service
     container_name: medical-exam-service-pro
     environment:
       - 'SERVICE=medical-exam-service'
+      - 'EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-service-pro:8763/eureka/'
+    ports:
+      - "${MEDICAL_EXAM_SERVICE_PORT}:${MEDICAL_EXAM_SERVICE_PORT}"
     depends_on:
       config-server-pro:
         condition: service_healthy
-      mysql-medical-exam-service-dev:
+      mysql-medical-exam-service:
         condition: service_healthy
     env_file:
       - .env
