--- a/infrastructure/pro/.env.example
+++ b/infrastructure/pro/.env.example
@@ -26,6 +26,9 @@ AUTH_DB_PORT=3306
 AUTH_DB_NAME=auth_db
 AUTH_DB_USERNAME=myuser
 AUTH_DB_PASSWORD=secret
+JWT_PRIVATE_KEY='your-private-key'
+JWT_PUBLIC_KEY='your-public-key'
+
 
 # PATIENT SERVICE
 PATIENT_SERVICE_PORT=8082
@@ -78,8 +81,9 @@ BILLING_DB_PASSWORD=secret
 # REPORT SERVICE
 REPORT_SERVICE_PORT=8088
 
-# NOTIFICATION SERVICE
-NOTIFICATION_SERVICE_PORT=8089
+# REDIS (for report-service caching)
+REDIS_HOST=redis
+REDIS_PORT=6379
 
 # MAIL SETTINGS (for notification service)
 MAIL_HOST=smtp.gmail.com
@@ -87,6 +91,9 @@ MAIL_PORT=587
 MAIL_USERNAME=your-email@gmail.com
 MAIL_PASSWORD=your-app-password
 MAIL_SENDER_NAME=HMS Healthcare
+NOTIFICATION_SERVICE_PORT=8089
+FOLLOWUP_CRON=*/5 * * * * ?          #0 0 8 * * ?
+FOLLOWUP_DAYS_OFFSET=0                # 1
 
 # FRONTEND BOOKING URL
 FRONTEND_BOOKING_URL=http://localhost:3000/patient/appointments/new
